# colibri-artesano-backend

./: .dockerignore  .env.example  .gitignore  Contributing.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  migrate.yml
alembic/: env.py
alembic/versions/: 0a0b69bc6e68_add_stock_to_products_table.py  27b60cf30b8b_add_product_favorites.py  2b926408fbf9_seed_default_variant_for_variantless_.py  3be7a9d3f136_move_product_images_to_variants.py  61f4d390e52f_add_store_category_trgm_indexes.py  8dc603289184_initial_schema.py  932040e62576_add_store_followers_table.py  a1b2c3d4e5f6_store_management_uuid_schema.py  a9f2b41c7d30_add_payment_fields_to_main_orders.py  b11626ad2038_drop_stock_column_from_products.py  b2c3d4e5f6a7_add_on_delete_cascade_to_fks.py  b50b395ceb05_initial_schema.py  bb1a7d019de1_add_notifications.py  c97cd381abe6_add_user_role.py  (+7 more)
backend/: README.md  pyproject.toml
scripts/: run_local.sh  seed.sql  seed_images.py
tests/: __init__.py  auth_test.py  cart_add_item_test.py  cart_list_test.py  cart_remove_item.py  cart_remove_item_test.py  cart_update_item_test.py  category_test.py  config_test.py  conftest.py  event_test.py  notifications_test.py  order_test.py  payment_test.py  product_detail_test.py  product_image_service_test.py  product_image_upload_test.py  product_paginated_list_test.py  product_search_test.py  product_subresource_test.py  product_write_test.py  products_test.py  smoke_test.py  store_order_service_test.py  store_order_test.py  store_test.py  users_test.py  vendor_test.py
(+103 files in other folders)
